# fake-news-predictor

./: .gitignore  README.md  fake_news_project.py  fake_news_project_report.docx  model.joblib  pyproject.toml  statement.md  streamlit_app.py  vectorizer.joblib
