[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fake-news-cli"
version = "1.0.0"
description = "Production-ready CLI for fake news text classification."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "joblib>=1.3",
  "matplotlib>=3.8",
  "pandas>=2.2",
  "scikit-learn>=1.4",
  "seaborn>=0.13",
  "streamlit>=1.36",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
fake-news = "fake_news_project:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
